<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">catchPhrase</string>
    <string name="action_settings">Settings</string>
    <string name="rules_button">Rules</string>
    <string name="rules_title">Rules</string>
    <string name="start_game_button">Play</string>
    <string name="your_phrase_string">Your word / phrase is: </string>
    <string name="skip_button">Skip</string>
    <string name="pause_button">Pause</string>
    <string name="next_button">Next</string>
    <string name="end_of_round1">Time\'s Run Out!</string>
    <string name="end_of_round2">Which team scored?</string>
    <string name="blue_team_button">Blue Team</string>
    <string name="red_team_button">Red Team</string>
    <string name="rebuttal1">Rebuttal</string>
    <string name="rebuttal2">\?</string>
    <string name="no_rebuttal_button">No</string>
    <string name="yes_rebuttal_button">Yes</string>
    
    <!-- String resources for the current score fragment -->
    <string name="current_score_title">Standings</string>
    <string name="blue_team_score">Blue Team</string>
    <string name="red_team_score">Red Team</string>
    <string name="current_round">Round</string>
    <string name="next_round_button">Next</string>
    <string name="return_to_home_button_text">Return to Home Page</string>
    <string name="round_picker_text">Select the number of rounds to play!</string>
    
    
    
    <string name="rules">
    This is CatchPhrase!  It is like a game of hot potato and charades!
    There are two teams.  Each team takes turns.
    At each turn, one person in the team will be holding the device and
    given a word or phrase on screen.  The goal is to get their
    teammates to guess the given word or phrase without saying it.
    All the while, a timer will be slowly going off.  If it goes off
    during a team\'s turn, the other team gets a point.
    If the timer goes off, the other team also has a chance to try
    to guess what the word / phrase was.  If they correctly guess,
    then they also gain an additional point.  
    This game continues on for a preset amount of rounds and the
    team with the most points at the end wins!
    </string>
	
</resources>
