<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:text="@string/rebuttal1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:textSize="50sp"
        >
    </TextView>
    <TextView
        android:text="@string/rebuttal2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:textSize="50sp"
        >
    </TextView>
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" 
        >
        <Button
            android:id="@+id/noRebuttalButton"
            android:text="@string/no_rebuttal_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
        </Button>
        <Button
            android:id="@+id/yesRebuttalButton"
            android:text="@string/yes_rebuttal_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
        </Button>
    </LinearLayout>
    
</LinearLayout>
