<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:text="@string/your_phrase_string"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:textSize="50sp"
        >
    </TextView>
    <TextView
        android:id="@+id/currentPhrase"
        android:text="blah blah blah"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:textSize="30sp"
        android:background="#0000FF"
		android:textColor="#FFFFFF"
        >
    </TextView>
    
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" 
        >
        <Button
            android:id="@+id/pauseButton"
            android:text="@string/pause_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
        </Button>
        <Button
            android:id="@+id/skipButton"
            android:text="@string/skip_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
        </Button>
        <Button
            android:id="@+id/nextButton"
            android:text="@string/next_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
        </Button>
    </LinearLayout>
   	
</LinearLayout>





