<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:text="@string/current_score_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="50sp"
        >
    </TextView>
    
    <TableLayout
    	android:layout_width="wrap_content"
    	android:layout_height="0dp"
    	android:layout_weight="2"
    	android:layout_gravity="center"
    	>
    	<TableRow
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:padding="5dp"
        	>	
        	<TextView
        		android:text="@string/blue_team_score"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:textSize="30sp"
        	>
        	</TextView>
        	<TextView
        	    android:id="@+id/blue_team_score"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:textSize="30sp"
        		android:paddingLeft="20dp"
        	>
        	</TextView>
    	</TableRow>
    	<TableRow
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:padding="5dp"
        	>	
        	<TextView
        		android:text="@string/red_team_score"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:textSize="30sp"
        	>
        	</TextView>
        	<TextView
        		android:id="@+id/red_team_score"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:textSize="30sp"
        		android:paddingLeft="20dp"
        	>
        	</TextView>
    	</TableRow>
    	<TableRow
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:padding="5dp"
        	>	
        	<TextView
        		android:text="@string/current_round"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:textSize="30sp"
        	>
        	</TextView>
        	<TextView
        		android:id="@+id/current_round"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:textSize="30sp"
        		android:paddingLeft="20dp"
        	>
        	</TextView>
    	</TableRow>
    	
    </TableLayout>
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        >
        <Button
            android:id="@+id/start_next_round_button"
        	android:text="@string/next_round_button"
       		android:layout_width="wrap_content"
       		android:layout_height="wrap_content" 
       		android:padding="25dp"
       		android:textSize="30dp"
        >
    	</Button>
    </LinearLayout>
    
</LinearLayout>
